--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,12 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     
-    color: rgb(255,255,255);
+    color: rgb(225, 225, 225);
     background-color: rgb(40, 40, 40);
 }
 
@@ -15,7 +18,6 @@ body {
     flex-direction: column;
     align-items: center;
 
-    height: 100vh;
     width: 100vw;
     padding: 10px 0px 5px;
 }
@@ -42,3 +44,35 @@ body {
 .button_status {
     padding: 10px;
 }
+
+#explaination {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 85vw;
+    padding: 5px;
+    text-align: left;
+}
+
+h4 {
+    color:white;
+}
+
+li, p{
+    padding: 5px;
+}
+
+.details-container {
+    padding: 5px;
+}
+
+/* Add some basic styling to hide the content initially and show it when the "active" class is applied */
+.content {
+    display: none;
+}
+  
+.content.active {
+display: block;
+/* Add any other styles for the expanded content here if needed */
+}
+  
